--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hospital-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ArtyomKr.github.io",
+  "homepage": "https://artyomkr.github.io/hospital-app/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
