--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
     "date-fns": "^2.9.0",
+    "gh-pages": "^2.2.0",
     "history": "^4.10.1",
     "immutable": "^4.0.0-rc.12",
     "moment": "^2.24.0",
